--- a/index.html
+++ b/index.html
@@ -5,8 +5,68 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="./style.css">
 </head>
 <body>
-    
+    <div class="container">
+        <div class="tiziq"></div>
+        <div class="categories">
+            <div class="bir">
+                <img src="./img/Rectangle 18.svg" alt="">
+                <p>Categories</p>
+            </div>
+            <div class="ikki">
+                <p>Browse By Category</p>
+                <img src="./img/Fill With Left Arrow.svg" alt="">
+                <img src="./img/Fill with Right Arrow.svg" alt="">
+            </div>
+            <div class="uch">
+                <div class="card">
+                    <img src="./img/aksesuar/Category-CellPhone.svg" alt="">
+                    <p>Phones</p>
+                </div>
+                <div class="card">
+                    <img src="./img/aksesuar/Category-Computer.svg" alt="">
+                    <p>Computers</p>
+                </div>
+                <div class="card">
+                    <img src="./img/aksesuar/Category-SmartWatch.svg" alt="">
+                    <p>SmartWatch</p>
+                </div>
+                <div class="card">
+                    <img src="./img/aksesuar/Category-Camera.svg" alt="">
+                    <p>Camera</p>
+                </div>
+                <div class="card">
+                    <img src="./img/aksesuar/Category-Headphone.svg" alt="">
+                    <p>HeadPhones</p>
+                </div>
+                <div class="card">
+                    <img src="./img/aksesuar/Category-Gamepad.svg" alt="">
+                    <p>Gaming</p>
+                </div>
+                
+            </div>
+            <div class="tiziq"></div>
+        </div>
+        <div class="categories">
+            <div class="bir">
+                <img src="./img/Rectangle 18.svg" alt="">
+                <p>This Month</p>
+            </div>
+            <div class="ikki">
+                <p>Best Selling Products</p>
+                <button class="all">View All</button>
+            </div>
+            <div class="uch">
+                <div class="cardd">
+                    <div class="tepa">
+
+                    </div>
+                    <div class="pas"></div>
+                </div>                
+            </div>
+        </div>
+    </div>
 </body>
 </html>
