--- a/index.html
+++ b/index.html
@@ -61,7 +61,9 @@
             <div class="uch">
                 <div class="cardd">
                     <div class="tepa">
-
+                        <img src="" alt="">
+                        <img src="" alt="">
+                        <img src="" alt="">
                     </div>
                     <div class="pas"></div>
                 </div>                
