--- a/index.html
+++ b/index.html
@@ -61,11 +61,51 @@
             <div class="uch">
                 <div class="cardd">
                     <div class="tepa">
-                        <img src="" alt="">
-                        <img src="" alt="">
-                        <img src="" alt="">
+                        <img src="./img/produkt/1.svg" alt="">
+                        <img class="bitta" src="./img/Fill Heart.svg" alt="">
+                        <img class="bitt" src="./img/Fill Eye.svg" alt="">
                     </div>
-                    <div class="pas"></div>
+                    <div class="pas">
+                        <p class="coat">The north coat</p>
+                        <p class="price">$260</p>
+                        <img src="./img/reyting/Frame 566.svg" alt="">
+                    </div>
+                </div>  
+                <div class="cardd">
+                    <div class="tepa">
+                        <img src="./img/produkt/1.svg" alt="">
+                        <img class="bitta" src="./img/Fill Heart.svg" alt="">
+                        <img class="bitt" src="./img/Fill Eye.svg" alt="">
+                    </div>
+                    <div class="pas">
+                        <p class="coat">The north coat</p>
+                        <p class="price">$260</p>
+                        <img src="./img/reyting/Frame 566.svg" alt="">
+                    </div>
+                </div>                
+                <div class="cardd">
+                    <div class="tepa">
+                        <img src="./img/produkt/1.svg" alt="">
+                        <img class="bitta" src="./img/Fill Heart.svg" alt="">
+                        <img class="bitt" src="./img/Fill Eye.svg" alt="">
+                    </div>
+                    <div class="pas">
+                        <p class="coat">The north coat</p>
+                        <p class="price">$260</p>
+                        <img src="./img/reyting/Frame 566.svg" alt="">
+                    </div>
+                </div>  
+                <div class="cardd">
+                    <div class="tepa">
+                        <img src="./img/produkt/1.svg" alt="">
+                        <img class="bitta" src="./img/Fill Heart.svg" alt="">
+                        <img class="bitt" src="./img/Fill Eye.svg" alt="">
+                    </div>
+                    <div class="pas">
+                        <p class="coat">The north coat</p>
+                        <p class="price">$260</p>
+                        <img src="./img/reyting/Frame 566.svg" alt="">
+                    </div>
                 </div>                
             </div>
         </div>
