--- a/index.html
+++ b/index.html
@@ -73,42 +73,46 @@
                 </div>  
                 <div class="cardd">
                     <div class="tepa">
-                        <img src="./img/produkt/1.svg" alt="">
-                        <img class="bitta" src="./img/Fill Heart.svg" alt="">
-                        <img class="bitt" src="./img/Fill Eye.svg" alt="">
+                        <img src="./img/produkt/Frame 606.svg" alt="">
+                        <img style="left:689px;" class="bitta" src="./img/Fill Heart.svg" alt="">
+                        <img style="left:689px;" class="bitt" src="./img/Fill Eye.svg" alt="">
                     </div>
                     <div class="pas">
-                        <p class="coat">The north coat</p>
-                        <p class="price">$260</p>
+                        <p class="coat">Gucci duffle bag</p>
+                        <p class="price">$960</p>
                         <img src="./img/reyting/Frame 566.svg" alt="">
                     </div>
                 </div>                
                 <div class="cardd">
                     <div class="tepa">
-                        <img src="./img/produkt/1.svg" alt="">
-                        <img class="bitta" src="./img/Fill Heart.svg" alt="">
-                        <img class="bitt" src="./img/Fill Eye.svg" alt="">
+                        <img src="./img/produkt/Frame 610.svg" alt="">
+                        <img style="left:990px;" class="bitta" src="./img/Fill Heart.svg" alt="">
+                        <img style="left:990px;" class="bitt" src="./img/Fill Eye.svg" alt="">
                     </div>
                     <div class="pas">
-                        <p class="coat">The north coat</p>
-                        <p class="price">$260</p>
+                        <p class="coat">RGB liquid CPU Cooler</p>
+                        <p class="price">$160</p>
                         <img src="./img/reyting/Frame 566.svg" alt="">
                     </div>
                 </div>  
                 <div class="cardd">
                     <div class="tepa">
-                        <img src="./img/produkt/1.svg" alt="">
-                        <img class="bitta" src="./img/Fill Heart.svg" alt="">
-                        <img class="bitt" src="./img/Fill Eye.svg" alt="">
+                        <img src="./img/produkt/Frame 612.svg" alt="">
+                        <img style="left:1290px;" class="bitta" src="./img/Fill Heart.svg" alt="">
+                        <img style="left:1290px;" class="bitt" src="./img/Fill Eye.svg" alt="">
                     </div>
                     <div class="pas">
-                        <p class="coat">The north coat</p>
-                        <p class="price">$260</p>
+                        <p class="coat">Small BookSelf</p>
+                        <p class="price">$360</p>
                         <img src="./img/reyting/Frame 566.svg" alt="">
                     </div>
                 </div>                
             </div>
         </div>
+        <!-- <div class="musik">
+            <p class="green">Categories</p>
+            <p>Enhance Your Music Experience</p>
+        </div> -->
     </div>
 </body>
 </html>
